# PWR-VI-KZW

./: .gitignore  README.md
Lab1/: CMakeLists.txt  main.cpp
Lab1/Dane/: rpq.zasady.txt
Lab1/include/: Proces.h  Shrage.cpp
Lab1_cpp/: CMakeLists.txt  main.cpp
Lab1_cpp/include/: Proces.cpp  Shrage.cpp  Shrage.h
Lab1_py/: main.py  sortRPQ.py
Lab2/: WiTi.py  dane-out.txt  dane_out.txt  main.py  timeit.py
Lab3/: main.py  neh.py  process.py  timeit.py
Lab3/data/: neh.data.txt
Lab4/: main.py
Lab5/: main.py
